feat: linter and prettier config

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AI-generated football manager-style hype speeches before your meetings" />
+    <meta
+      name="description"
+      content="AI-generated football manager-style hype speeches before your meetings"
+    />
     <title>Gaffer - Calendar Hype Man</title>
   </head>
   <body>
