--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://*.supabase.co wss://*.supabase.co http://localhost:* https://localhost:*; img-src 'self' data: blob:; media-src 'self' blob:;"
+    />
+    <meta
       name="description"
       content="AI-generated football manager-style hype speeches before your meetings"
     />
