feat: rate limiting & seo & error boundary

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -13,6 +13,26 @@
       content="AI-generated football manager-style hype speeches before your meetings"
     />
     <title>Gaffer - Calendar Hype Man</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gaffer.app/" />
+    <meta property="og:title" content="Gaffer - AI Motivational Speeches for Your Meetings" />
+    <meta
+      property="og:description"
+      content="Get hyped for your meetings with AI-generated football manager-style speeches. Choose from iconic managers like Ferguson, Klopp, Guardiola, and more."
+    />
+    <meta property="og:image" content="https://gaffer.app/og-image.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://gaffer.app/" />
+    <meta name="twitter:title" content="Gaffer - AI Motivational Speeches for Your Meetings" />
+    <meta
+      name="twitter:description"
+      content="Get hyped for your meetings with AI-generated football manager-style speeches."
+    />
+    <meta name="twitter:image" content="https://gaffer.app/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
