--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://*.supabase.co wss://*.supabase.co http://localhost:* https://localhost:*; img-src 'self' data: blob:; media-src 'self' blob: https://*.supabase.co;"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://*.fly.dev http://localhost:* https://localhost:*; img-src 'self' data: blob:; media-src 'self' blob: https://*.supabase.co;"
     />
     <meta
       name="description"
