feat: index updates

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://*.fly.dev http://localhost:* https://localhost:*; img-src 'self' data: blob:; media-src 'self' blob: https://*.supabase.co;"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://*.fly.dev https://api.meeting-gaffer.com http://localhost:* https://localhost:*; img-src 'self' data: blob:; media-src 'self' blob: https://*.supabase.co;"
     />
     <meta
       name="description"
@@ -16,23 +16,23 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gaffer.app/" />
+    <meta property="og:url" content="https://meeting-gaffer.com/" />
     <meta property="og:title" content="Gaffer - AI Motivational Speeches for Your Meetings" />
     <meta
       property="og:description"
       content="Get hyped for your meetings with AI-generated football manager-style speeches. Choose from iconic managers like Ferguson, Klopp, Guardiola, and more."
     />
-    <meta property="og:image" content="https://gaffer.app/og-image.png" />
+    <meta property="og:image" content="https://meeting-gaffer.com/og-image.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://gaffer.app/" />
+    <meta name="twitter:url" content="https://meeting-gaffer.com/" />
     <meta name="twitter:title" content="Gaffer - AI Motivational Speeches for Your Meetings" />
     <meta
       name="twitter:description"
       content="Get hyped for your meetings with AI-generated football manager-style speeches."
     />
-    <meta name="twitter:image" content="https://gaffer.app/og-image.png" />
+    <meta name="twitter:image" content="https://meeting-gaffer.com/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
