feat: google verification

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="Ay3TzFR4RebgEsV3zBsmW72J1DQU01gxKaDQ2elXiB4" />
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://*.fly.dev https://api.meeting-gaffer.com http://localhost:* https://localhost:*; img-src 'self' data: blob:; media-src 'self' blob: https://*.supabase.co;"
