feat: seo update

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="canonical" href="https://meeting-gaffer.com/" />
+    <link rel="preconnect" href="https://api.meeting-gaffer.com" />
+    <link rel="dns-prefetch" href="https://api.meeting-gaffer.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="Ay3TzFR4RebgEsV3zBsmW72J1DQU01gxKaDQ2elXiB4" />
     <meta
@@ -11,9 +15,9 @@
     />
     <meta
       name="description"
-      content="AI-generated football manager-style hype speeches before your meetings"
+      content="Get AI-generated football manager-style hype speeches before your meetings. Choose from Ferguson, Klopp, Guardiola, and more."
     />
-    <title>Gaffer - Calendar Hype Man</title>
+    <title>Gaffer - AI Motivational Speeches for Your Meetings</title>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -34,6 +38,30 @@
       content="Get hyped for your meetings with AI-generated football manager-style speeches."
     />
     <meta name="twitter:image" content="https://meeting-gaffer.com/og-image.png" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Gaffer",
+        "alternateName": "Gaffer - Calendar Hype Man",
+        "url": "https://meeting-gaffer.com",
+        "description": "AI-generated football manager-style motivational speeches before your meetings. Choose from iconic managers like Ferguson, Klopp, Guardiola, and more.",
+        "applicationCategory": "ProductivityApplication",
+        "operatingSystem": "Web",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "creator": {
+          "@type": "Organization",
+          "name": "Gaffer",
+          "url": "https://meeting-gaffer.com"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
